fix: fix invisible inline codes in TOC

--- a/packages/logos-docusaurus-theme/src/client/css/custom.scss
+++ b/packages/logos-docusaurus-theme/src/client/css/custom.scss
@@ -429,7 +429,6 @@ small {
 }
 
 .table-of-contents__link--active code {
-  color: rgb(var(--lsd-text-secondary)) !important;
   opacity: 0.7;
 }
 
